  - FLTK's ABI version can be configured with 'configure' and CMake.
    See documentation in README.abi-version.txt.

  Bundled libraries

  - Bundled image libraries have been upgraded to newer versions.
    For details see README.bundled-libs.txt.

  1.4.0 ABI FEATURES

  - None. FLTK 1.4.0 has a new ABI, breaking 1.3.x ABI.


  Other Improvements

  - (add new items here)
  - Support for building for the arm64 architecture used by macOS 11.0 "Big Sur".
  - Add optional argument to Fl_Printer::begin_job() to receive
    a string describing the error when an error occurs.
  - Fix Windows-specific bug when the program tries to enlarge a
    maximized window, that would freeze the window (git issue #65).
  - Improve X11 16-bit coordinate clipping for text (STR 2798). This
    assumes that text is "small" WRT 16-bit coordinate space and clips
    text if at least one of the x/y coordinates is out of bounds.
  - Fix Fl::add_timeout() in draw() under Linux (STR 3188)
  - Class Fl_Native_File_Chooser uses in priority the file chooser dialog
    of GTK version 3 when available on the running X11 platform, and falls back
    to version 2 when V3 is not available. In contrast, GTK version 2 was used
    in priority by FLTK 1.3.x
  - Added support for macOS 10.15 "Catalina"
  - Improved documentation for '@' symbols in labels (STR #2940).
  - Fl_Roller can now be controlled via the mouse wheel (STR #3120).
  - Tooltips hide by themselves after 12 seconds (STR #2584).
  - Added widget visibility indicator to Fluid (STR #2669).
  - Added Fl_Input_::append() method (STR #2953).
  - Fix for STR#3473 (and its duplicate STR#3507) to restore configure-based
    builds on recent Linux/Unix distributions where the freetype-config
    command has been replaced by pkg-config.
  - Added support for MacOS 10.14 "Mojave": all drawing to windows is done
    through "layer-backed views" when the app is linked to SDK 10.14.